💄 added view transitions and fixed layout issues

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -134,6 +134,11 @@
   align-items: center;
 }
 
+.info-sidebar-metadata {
+  width: 100%;
+  height: 100%;
+}
+
 .info-sidebar-metadata .creation-date {
   margin-bottom: -12px;
 }
@@ -182,20 +187,21 @@
 }
 
 .info-span {
-  font-size: 14px;
+  font-size: 0.8em;
   color: var(--text-muted);
 }
 
 .info-sidebar {
   position: absolute;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
-  padding: 10px;
+  padding: 15px;
   top: 50px;
   right: 0;
   bottom: 0;
-  width: 250px;
+  width: 220px;
+  gap: 10px;
   background: var(--bg-sidebar);
   box-shadow: var(--shadow);
   border: 1px solid var(--border-color);
@@ -225,13 +231,6 @@
     transform 0.3s cubic-bezier(0.3, 0, 0.8, 0.15),
     opacity 0.3s ease,
     visibility 0s linear 0.3s;
-}
-
-.info-sidebar-metadata {
-  display: flex;
-  flex-direction: column;
-  padding: 5px 15px;
-  gap: 10px;
 }
 
 .todo-progress-container,
